<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/secondaryLightColor"
    android:focusableInTouchMode="true">

    <include layout="@layout/util_progress_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="64dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_shopwire" />

            <LinearLayout
                android:id="@+id/ll_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <TextView
                    android:id="@+id/txt_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_label_welcome"
                    android:textSize="@dimen/text_large2"
                    android:textStyle="bold"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:id="@+id/txt_login_or_register_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="Registrate con tus redes sociales"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/primaryLightColor"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_login_or_register_facebook"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="56dp"
                            android:layout_marginRight="@dimen/margin_medium"
                            android:background="@drawable/shape_round_button_fb"
                            android:paddingLeft="24dp"
                            android:paddingRight="32dp"
                            android:drawableLeft="@drawable/ic_facebook"
                            android:text="Facebook"
                            android:textColor="@color/secondaryLightColor"
                            android:textAllCaps="false"/>

                        <Button
                            android:id="@+id/btn_login_or_register_google"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="56dp"
                            android:background="@drawable/shape_round_button_google"
                            android:paddingLeft="24dp"
                            android:paddingRight="32dp"
                            android:drawableLeft="@drawable/ic_google"
                            android:text="Google"
                            android:textAllCaps="false"
                            android:textColor="@color/secondaryLightColor"
                            style="?android:attr/borderlessButtonStyle"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/login_label_login_or_register_email"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/primaryLightColor"/>

                    <LinearLayout
                        android:id="@+id/ll_login_fields"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etxt_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:paddingLeft="@dimen/margin_medium"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/text_medium"
                            android:hint="@string/hint_login_email"
                            android:background="@drawable/shape_round_input"
                            android:textColor="@color/primaryColor"/>

                        <EditText
                            android:id="@+id/etxt_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@drawable/shape_round_input"
                            android:hint="@string/hint_login_password"
                            android:inputType="textPassword"
                            android:imeOptions="actionGo"
                            android:paddingLeft="@dimen/margin_medium"
                            android:textColor="@color/primaryColor"
                            android:textSize="@dimen/text_medium"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_btn_continue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_login_or_register"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:text="@string/btn_sign_up_title"
                            android:textAllCaps="false"
                            android:textColor="@color/secondaryLightColor"
                            android:background="@drawable/shape_round_button_bg"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:paddingTop="@dimen/margin_small"
                                android:paddingBottom="@dimen/margin_medium"
                                android:paddingLeft="@dimen/margin_medium"
                                android:id="@+id/txt_login_or_register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login_label_login_now"
                                android:textColor="@drawable/selector_text_view"
                                android:textSize="@dimen/text_medium" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>

